2005-11-17  Gary Benson  <gbenson@redhat.com>

	* java/lang/SecurityManager.java (checkAccess): Correctly
	identify system threads (and thus check permissions for them).

2005-11-17  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComponent.java
	(setMinimumSize): Check for null argument before making a copy.

2005-11-17  Paul Jenner  <psj@harker.dyndns.org>

	* native/jni/xmlj/xmlj_util.h (XMLJ_64BIT_POINTER): Removed.

2005-11-17  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComponent.java
	(setMaximumSize): Check for null argument before making a copy.

2005-11-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JEditorPane.java
	(PlainEditorKit): New inner class.
	(createDefaultEditorKit): Return an instance of PlainEditorKit.
	* javax/swing/JTextPane.java
	(insertComponent): Implemented previously stubbed method.
	(insertIcon): Implemented previously stubbed method.

2005-11-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicEditorPaneUI.java
	(create): Removed unneeded method.
	* javax/swing/plaf/basic/BasicTextPaneUI.java
	(create): Removed unneeded method.

2005-11-17  Roman Kennke  <kennke@aicas.com>

	* java/awt/Container.java
	(Container): Added comment.
	(remove): Only call removeNotify if removed component is still
	showing.
	(paintComponents): Call paint() instead of super.paint().
	(AccessibleContainerHandler.AccessibleContainerHandler): Added
	comment.
	(LightweightDispatcher.acquireComponentForMouseEvent):
	Don't special case MOUSE_RELEASED events. They should be
	dispatched unmodified just as MOUSE_PRESSED.
	(LightweightDispatcher.handleEvent): Also clean up the pressCount
	after a MOUSE_RELEASE.

2005-11-17  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/BoxView.java:
	(modelToView): New API method.

2005-11-17  Lillian Angel  <langel@redhat.com>

	Fixes PR classpath/PR24721
	* javax/swing/text/BoxView.java